public/style.css
body {
    margin: 0;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
  
    background-image: linear-gradient(-15deg, #7400ff, #3c067c, #380061, #370056, #370054, #370054, #380050, #380061, #3c067c, #7400ff);
    -webkit-animation: Disco 20s cubic-bezier(.46,.03,.52,.96) infinite;
    -moz-animation: Disco 20s cubic-bezier(.46,.03,.52,.96) infinite;
    animation: Disco 20s cubic-bezier(.46,.03,.52,.96) infinite;
    background-size: 200% 200%;
    background-attachment: fixed;
  
    overflow: hidden;
    overflow-y: auto;
    min-height: 100vh;

    transition: 0.5s;
}

@font-face {
    font-family: 'Montserrat';
    src: url('/fonts/Montserrat-Bold.ttf') format('truetype');
}

a {
    color: #fff;
    text-decoration-color: #BB25FF;
}

a:hover {
    color: #ffffffaf;
}

@-webkit-keyframes Disco {
    0%{background-position:10% 0%}
    50%{background-position:91% 100%}
    100%{background-position:10% 0%}
}

@keyframes Disco {
    0% {
        background-position: 10% 0%;
    }
    50% {
        background-position: 91% 100%;
    }
    100% {
        background-position: 10% 0%;
        transform: rotate(0deg);
    }
}

.app {
    width: fit-content;
    height: fit-content;
    color: white;
    font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    backdrop-filter: blur(4px);
    -webkit-backdrop-filter: blur(4px);
    background-color: rgba(37, 6, 58, 0.74);
    border-radius: 10px;
    padding: 25px 50px;
    margin-left: 15px;
    margin-right: 15px;
    box-shadow: 7px 7px 33px 0px #00000026;
    border: 1px solid #9046B1;
    transition: 0.4s;
    margin-bottom: 50px; /* Add this line */
}

.custom-dropdown {
    position: relative;
    display: inline-block;
    width: 100%;
    max-width: 300px;
}

.dropdown-btn {
    width: 100%;
    padding: 10px;
    font-size: 16px;
    border: 1px solid #470e75;
    border-radius: 8px;
    background: rgba(128, 0, 128, 0.3) url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><path d="M4 6l4 4 4-4H4z" fill="%23fff"/></svg>') no-repeat right 10px center;
    color: #fff;
    cursor: pointer;
    text-align: left;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 8px; /* Adjusted gap between icon and text */
}

.dropdown-btn img {
    width: 20px;
    height: 20px;
    margin-right: 0; /* Remove margin to reduce gap */

    /* Temp: invert the image colour from black to white, looks better */
    filter: invert(100%);
    -webkit-filter: invert(100%);
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #d9a6f5;
    min-width: 100%;
    border-radius: 8px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
    overflow-y: auto; /* Allow scrollbar */
    max-height: 200px; /* Adjust as needed */
    box-sizing: border-box;
    right: 0;
}

.dropdown-content a {
    cursor: pointer;
    display: flex;
    align-items: center;
    padding: 10px;
    color: #6a0dad;
    text-decoration: none;
    white-space: nowrap;
}

.dropdown-content a:hover {
    background-color: #d09ff1; /* Slightly darker light purple for hover effect */
}

.dropdown-content img {
    width: 20px;
    height: 20px;
    margin-right: 10px; /* Space between icon and text in dropdown */
}

.dropdown-content::-webkit-scrollbar {
    width: 8px;
}

.dropdown-content::-webkit-scrollbar-thumb {
    background-color: #9405a1;
    border-radius: 4px;
}

.dropdown-content::-webkit-scrollbar-track {
    background-color: transparent;
}

.custom-dropdown:hover .dropdown-content {
    display: block;
}

.timestamp {
    font-size: smaller;
    font-family: monospace;
    opacity: 0.75;
}

/* Ensure dropdown fits within the screen */
@media (max-width: 600px) {
    .dropdown-content {
        left: 0;
        right: 0;
        transform: none; /* Adjust dropdown position for small screens */
    }
}

/* Show dropdown content below button after selection */
.dropdown-content.show-below {
    top: 100%;
    bottom: auto;
}

.conversion-box {
    display: flex;
    align-items: center;
    position: relative; /* Ensures absolute positioning of floating placeholder */
}

.conversion-input {
    padding: 10px;
    padding-top: 20px; /* Increase space at the top for floating placeholder */
    font-size: 16px;
    border: 1px solid #6713aa;
    border-radius: 5px;
    width: 150px;
    margin: 0 10px; /* Adds space between the inputs */
    text-align: center;
    position: relative;
    background: rgb(56, 2, 74); /* Ensure background matches the container */
}

.conversion-input::placeholder {
    transition: all 0.3s ease;
    color: #6713aa;
    position: absolute;
    top: 10px; /* Adjust this value to control the starting position */
    left: 10px; /* Adjust left position as needed */
    font-size: 16px;
    transform: translateY(0); /* No vertical translation initially */
    pointer-events: none;
    z-index: 1111; /* Ensures the placeholder text appears above the input field */
}

.conversion-input:focus::placeholder,
.conversion-input:not(:placeholder-shown)::placeholder {
    top: -15px; /* Adjust this value to control how high the placeholder floats */
    left: 10px; /* Adjust if needed */
    font-size: 12px; /* Adjust this value for a smaller floating placeholder */
    color: #8f19cf;
}

.conversion-input:hover {
    border-color: #8f19cf;
}

.conversion-input:focus {
    border-color: #c24eff;
    background-color: #00000018;
}

.swap-button {
    cursor: default;
    font-size: 24px;
    padding: 10px;
    color: white;
    border-radius: 50%; /* Makes the button circular */
    border: none;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    width: 50px; /* Ensures the button is circular */
    height: 50px; /* Ensures the button is circular */
    margin: 0 10px; /* Adds space around the swap button */
}


.blurred {
    filter: blur(10px);
    -webkit-filter: blur(10px);
}

.darkened {
    backdrop-filter: brightness(0.5);
    -webkit-backdrop-filter: brightness(0.5);
}

input {
    background-color: #ffffff21;
    border: 0px solid transparent;
    transition: all .125s ease-in-out;
    color: #fff;
    border-radius: 6px;
}

hr {
    color: #9046B1;
}

textarea, select, input, button { outline: none; }

.app input, .app button {
    margin: 15px 0;
    padding: 10px;
}

.logo-gradient {
    background: linear-gradient(to right, #8B20CA 50%, #6202D4 60%);
    background-size: 200% 200%;
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    animation: BreathingGradient 7.5s cubic-bezier(.46,.03,.52,.96) infinite;
}

@keyframes BreathingGradient {
    0% {background-position: 0% 50%;}
    50% {background-position: 100% 50%;}
    100% {background-position: 0% 50%;}
}

#intro code {
    width: 100%;
    display: block;
    overflow: auto;
    background-color: #0000006e;
    padding: 5px;
    border-radius: 6px;
    margin-bottom: 10px;
}

.menu {
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding-top: 5px;
    background-image: linear-gradient(#9046B130, transparent);
}

.menu h4 {
    transition: 0.2s;
    margin-left: 5px;
    margin-right: 5px;
    margin-top: 0;
    margin-bottom: 0;
}

.text-btn {
    opacity: 0.5;
}

.text-btn:hover {
    opacity: 0.8;
    cursor: pointer;
}

button {
    background-color: #9b46c72e;
    border-color: #c24eff9c;
    color: white;
    font-weight: bold;
    border-radius: 6px;
    cursor: pointer;
    border-style: solid;
    border-width: 1px;
    transition: 0.2s;
}

button:hover {
    background-color: #9b46c733;
    border-color: #c24eff;
}

button:focus {
    background-color: #9b46c733;
    border-color: #c24eff;
}

/* Custom dropdown container */
.time-scale-selector {
    position: relative;
    display: flex;
    justify-content: center; /* Center the dropdown container */
    width: 100%; /* Adjust width as needed */
}

/* Dropdown button styling */
.time-scale-dropbtn {
    width: 175px;
    padding: 10px;
    font-size: 16px;
    border: 1px solid #470e75;
    border-radius: 8px;
    background: rgba(128, 0, 128, 0.3) url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><path d="M4 6l4 4 4-4H4z" fill="%23fff"/></svg>') no-repeat right 10px center;
    color: #fff;
    cursor: pointer;
    text-align: left;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 8px; /* Adjusted gap between icon and text */
}

/* Icon inversion on the button (black icons aren't good on dark backgrounds!) */
.time-scale-dropbtn img {
    filter: invert(100%);
    -webkit-filter: invert(100%);
}

/* Dropdown content (hidden by default) */
.time-scale-dropdown-content {
    display: none;
    position: absolute;
    background-color: #d9a6f5; /* Light purple background */
    border: 1px solid #4B2D77; /* Dark purple border */
    border-radius: 8px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    box-sizing: border-box;
    top: 100%; /* Position below the button */
    width: 50%; /* Match the width of the button */
    max-height: 300px; /* Optional: Limit height to prevent overflow */
    overflow-y: auto; /* Add scroll if content exceeds max height */
    z-index: 1000; /* Ensure it appears above other content */
    padding: 5px; /* Add padding to the content */
}

/* Dropdown items */
.time-scale-dropdown-content div {
    color: #4B2D77; /* Dark purple text */
    padding: 10px;
    text-align: left;
    cursor: pointer;
    display: flex;
    align-items: center;
}

/* Dropdown items on hover */
.time-scale-dropdown-content div:hover {
    background-color: #4B2D77;
    color: white;
}

/* Icon styling */
.time-scale-icon {
    width: 20px;
    height: 20px;
    margin-right: 12px; /* Add margin to create space between icon and text */
}

/* Show dropdown on button click */
.time-scale-selector:hover .time-scale-dropdown-content {
    display: block;
}

/* Arrow styling for dropdown button */
.time-scale-dropbtn::after {
    content: '';
    position: absolute;
    top: 50%;
    right: 10px;
    width: 0;
    height: 0;
}

.footer {
    display: flex;
    flex-flow: wrap;
    justify-content: center;
    position: absolute;
    width: 100%;
    bottom: 5px;
    color: #fff;
    font-size: 14px;
    z-index: -1;
    overflow: hidden;
    font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}

.footer a {
    margin-left: 5px;
    margin-right: 5px;
}

